<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.NameFragment">

    <data>

    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/nameConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/appname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/lights_out_text"
        android:textSize="@dimen/font_main_text"
        app:fontFamily="@font/raleway_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/bulb_off_image"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="320dp"
        android:contentDescription="@string/bulb_text"
        android:src="@drawable/main_bulboff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bulb_on_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/bulb_on_image"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="320dp"
        android:contentDescription="@string/bulb_text"
        android:src="@drawable/main_bulbon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bulb_off_image"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/name_hint"
        android:inputType="textShortMessage|textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appname_text"
        tools:visibility="visible" />

    <Button
        android:id="@+id/play_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_marginTop"
        android:text="@string/play_text"
        android:textColor="@color/button_text"
        android:textSize="@dimen/button_text_size"
        app:fontFamily="@font/raleway_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text"
        app:layout_constraintVertical_bias="0.120000005"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>